2006-08-03  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-impress.el (shimbun-impress-groups-alist): Use rss
	for pc group.

2006-07-31  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-impress.el: Require sb-rss.
	(shimbun-impress): Inherite from shimbun-rss.
	(shimbun-impress-groups-alist): In each element, 2nd element is
	link-regexp or rss; add robot group.
	(shimbun-rss-build-message-id): New overridden method.
	(shimbun-impress-get-headers): Rename from
	`shimbun-impress-get-headers-date'.
	(shimbun-impress-get-headers-sequence): Remove.
	(shimbun-headers): Rewrite.
	(shimbun-article-url): New overridden method.

2006-07-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-truncate-string): Don't autoload mule-util.el.

	* shimbun/sb-sankei.el (shimbun-clear-contents): Break paragraphs
	in column group; no need to add content-end boundary in editoria
	and column groups.

2006-07-16  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-cnet-jp.el (shimbun-make-contents): Improve regexp.

	* shimbun/sb-zdnet-jp.el (shimbun-make-contents): Ditto.

2006-07-14  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-cnet-jp.el (shimbun-clear-contents): Remove
	thumbnails.

2006-07-13  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-opentechpress-jp.el: New module.

	* shimbun/sb-linux-ja.el: Removed.

2006-07-12  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/shimbun.el: Changes to handle <BASE> tag properly.
	(shimbun-make-mime-article): Accept a base URL of this current
	article as the 3rd optional argument.
	(shimbun-current-base-url): New function.
	(shimbun-make-html-contents): Call the above.
	(shimbun-from-address): Accept backends that have no address.

	* shimbun/sb-multi.el: New virtual class.

	* shimbun/sb-atmarkit.el: Use `shimbun-multi' class.
	(shimbun-multi-next-url, shimbun-multi-clear-contents): New
	methods.
	(shimbun-atmarkit-use-base-url): Abolished.