@@ -1,3 +1,8 @@
+2006-08-07  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>
+
+	* shimbun/sb-impress.el (shimbun-headers): Fix problem when
+	title is not included in rss item.
+
 2006-08-03  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>
 
 	* shimbun/sb-impress.el (shimbun-impress-groups-alist): Use rss
